load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["analyzer.go"],
    importpath = "github.com/prysmaticlabs/prysm/v5/tools/analyzers/errcheck",
    visibility = ["//visibility:public"],
    deps = ["@com_github_kisielk_errcheck//errcheck:go_default_library"],
)
